# multimodal-agent

./: .gitignore  README.md  docker-compose.yml  fetched_data.txt  pyproject.toml
client/: app-config.ts  package.json
client/.next/: app-build-manifest.json  prerender-manifest.json  trace
client/.next/cache/: .rscinfo
client/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
client/.next/server/chunks/: [root-of-the-server]__147c551c._.js  [root-of-the-server]__147c551c._.js.map  b5d7d_next_67bb9be6._.js  b5d7d_next_67bb9be6._.js.map
client/.next/static/chunks/: 69652_@swc_helpers_cjs_77b72907._.js.map  [root-of-the-server]__ff8c00f0._.css  [root-of-the-server]__ff8c00f0._.css.map  _9f7ca432._.js  _9f7ca432._.js.map  app_favicon_ico_mjs_d58df16e._.js  app_layout_tsx_f71d416f._.js  b5d7d_next_dist_0fbe6411._.js.map  b5d7d_next_dist_8d739cb4._.js.map  b5d7d_next_dist_client_e0517feb._.js.map  b5d7d_next_dist_compiled_2edf9df4._.js.map  b5d7d_next_dist_compiled_next-devtools_index_9693f825.js  b5d7d_next_dist_compiled_next-devtools_index_9693f825.js.map  b5d7d_next_dist_compiled_react-dom_e2c4ff07._.js.map  node_modules__pnpm_1d0bf55c._.js  node_modules__pnpm_1d0bf55c._.js.map  styles_globals_css_bad6b30c._.single.css  (+1 more)
client/app/: layout.tsx
client/app/(app)/: layout.tsx
client/components/app/: welcome-view.tsx
client/styles/: globals.css
config/: settings.yml
src/: agent.py  google-agent.py  groq_search.py  logger.py  video-agent.py  yt.py
src/archive/: initial-agent.py
(+25 files in other folders)
